--- a/www/index.html
+++ b/www/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
+    <link rel="stylesheet" href="css/styleindex.css">
     <script src="components/loader.js"></script>
-    <script>
-        //
-        // TODO: Write JavaScript code here
-        //
-    </script>
 </head>
 <body>
-    <a href="game.html">はじめる</a>
+    <a href="game.html" class="btn">はじめる</a>
 </body>
 </html>
