タイトルとスクロール禁止エラーを修正

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <script src="components/loader.js"></script>
 </head>
 <body>
+    <div>Go Touch</div>
     <a href="game.html" class="btn">はじめる</a>
 </body>
 </html>
